--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-ejs-layouts": "~2.2.0",
     "express-session": "^1.15.2",
     "mongoose": "~4.8.5",
+    "mongoose-currency": "^0.2.0",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
