--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "mon": "nodemon ./bin/www"
   },
   "dependencies": {
-    "aws-sdk": "^2.63.0",
+    "aws-sdk": "^2.186.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.16.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
+    "debug": "^2.6.9",
     "dotenv": "^4.0.0",
-    "ejs": "~2.5.5",
+    "ejs": "^2.5.7",
     "express": "~4.14.1",
     "express-ejs-layouts": "~2.2.0",
-    "express-session": "^1.15.2",
-    "mathjs": "^3.13.3",
+    "express-session": "^1.15.6",
+    "mathjs": "^3.20.1",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
@@ -31,6 +31,6 @@
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.14.11"
   }
 }
